<?xml version="1.0"?>
<package format="3">
  <name>robot_controllers</name>
  <version>0.9.3</version>
  <description>
    Some basic robot controllers for use with robot_controllers_interface.
  </description>

  <author>Michael Ferguson</author>
  <maintainer email="eric.relson@zebra.com">Eric Relson</maintainer>
  <maintainer email="jeffrey.wilson@zebra.com">Jeff Wilson</maintainer>
  <maintainer email="opensource@fetchrobotics.com">Fetch Robotics Open Source Team</maintainer>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>angles</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>nav_msgs</depend>
  <depend>liborocos-kdl-dev</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>robot_controllers_interface</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>trajectory_msgs</depend>
  <depend>urdf</depend>

  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
